Fix players positions on small screen

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -394,34 +394,34 @@ body {
       .game__player-one {
         grid-column-start: 1;
         grid-column-end: 4;
-        grid-row-start: 1;
-        grid-row-end: 1;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.3); }
+        grid-row-start: 5;
+        grid-row-end: 5;
+        border-top: 1px solid rgba(255, 255, 255, 0.3); }
       .game__player-two {
-        grid-column-start: 1;
-        grid-column-end: 4;
-        grid-row-start: 2;
-        grid-row-end: 2;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.3); }
-        .game__player-two--duel {
-          grid-column-start: 1;
-          grid-column-end: 4;
-          grid-row-start: 5;
-          grid-row-end: 5;
-          border-top: 1px solid rgba(255, 255, 255, 0.3);
-          border-bottom: none; }
-      .game__player-three {
         grid-column-start: 1;
         grid-column-end: 4;
         grid-row-start: 4;
         grid-row-end: 4;
         border-top: 1px solid rgba(255, 255, 255, 0.3); }
+        .game__player-two--duel {
+          grid-column-start: 1;
+          grid-column-end: 4;
+          grid-row-start: 1;
+          grid-row-end: 1;
+          border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+          border-top: none; }
+      .game__player-three {
+        grid-column-start: 1;
+        grid-column-end: 4;
+        grid-row-start: 2;
+        grid-row-end: 2;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.3); }
       .game__player-four {
         grid-column-start: 1;
         grid-column-end: 4;
-        grid-row-start: 5;
-        grid-row-end: 5;
-        border-top: 1px solid rgba(255, 255, 255, 0.3); }
+        grid-row-start: 1;
+        grid-row-end: 1;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.3); }
       .game__player-score {
         position: absolute;
         top: 18%;
